--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "0.14.x",
     "react-dom": "0.14.x",
     "react-router": "^2.0.1",
-    "reqwest": "^2.0.5"
+    "reqwest": "^2.0.5",
+    "pubsub-js":"^1.5.3"
   },
   "devDependencies": {
     "dora": "0.3.x",
